--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newegg-marketplace",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Newegg Marketplace API Wrapper for Node.js",
   "license": "MIT",
   "homepage": "https://github.com/zikeji/node-newegg-marketplace",
@@ -36,6 +36,16 @@
     "eslint-plugin-import": "^1.12.0",
     "prettier-eslint": "^6.4.2"
   },
-  "keywords": ["newegg", "api", "wrapper", "marketplace", "sellers"],
-  "files": ["out/src", "README.md", "LICENSE.md"]
+  "keywords": [
+    "newegg",
+    "api",
+    "wrapper",
+    "marketplace",
+    "sellers"
+  ],
+  "files": [
+    "out/src",
+    "README.md",
+    "LICENSE.md"
+  ]
 }
