--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ node_js:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y unzip
-  - cd dev-utils/newegg-marketplace-api-docparser && wget https://sellerportal.newegg.com/Guideline/Newegg_Marketplace_API_DeveloperGuide.zip && unzip Newegg_Marketplace_API_DeveloperGuide.zip
+  - cd dev-utils/newegg-marketplace-api-docparser && wget https://sellerportal.newegg.com/Guideline/Newegg_Marketplace_API_DeveloperGuide.zip && unzip Newegg_Marketplace_API_DeveloperGuide.zip && cd ../../
 install:
   - npm install
-  - cd dev-utils/newegg-marketplace-api-docparser && npm install
-  - cd dev-utils/newegg-marketplace-library-generator && npm install
+  - cd dev-utils/newegg-marketplace-api-docparser && npm install && cd ../../
+  - cd dev-utils/newegg-marketplace-library-generator && npm install && cd ../../
 script:
-  - cd dev-utils/newegg-marketplace-api-docparser && node index.js NeweggMarketplaceAPIDeveloperGuide_*.pdf out.json
+  - cd dev-utils/newegg-marketplace-api-docparser && node index.js NeweggMarketplaceAPIDeveloperGuide_*.pdf out.json cd ../../
   - rm -rf src/Marketplace
-  - cd dev-utils/newegg-marketplace-library-generator && node index.js ../newegg-marketplace-api-docparser/out.json ../../src/Marketplace
+  - cd dev-utils/newegg-marketplace-library-generator && node index.js ../newegg-marketplace-api-docparser/out.json ../../src/Marketplace && cd ../../
   - npm build
