Added test for Travis. Unfortunately I'm not sure if Newegg has a sandbox, so I'm just running a test to make sure I get an "InvalidToken" error from Newegg. Which means that the API client was built properly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ script:
   - rm -rf src/Marketplace
   - cd dev-utils/newegg-marketplace-library-generator && node index.js ../newegg-marketplace-api-docparser/out.json ../../src/Marketplace && cd ../../
   - npm build
+  - npm run test
