--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "./out/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests/unauthorized.js",
     "build": "babel src -d out/src"
   },
   "engines": {
@@ -34,7 +34,8 @@
     "eslint": "^4.7.2",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "prettier-eslint": "^8.1.1"
+    "prettier-eslint": "^8.1.1",
+    "mocha": "^3.5.3"
   },
   "keywords": ["newegg", "api", "wrapper", "marketplace", "sellers"],
   "files": ["out/src", "README.md", "LICENSE.md"]
